# genai_scaffold

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: python-publish.yml
genai_scaffold/: __main__.py  cli.py  scaffold.py  template_engine.py
genai_scaffold/core/: __init__.py  config.py
genai_scaffold/generators/: __init__.py  project_generator.py
genai_scaffold/templates/: README.md.j2
genai_scaffold/templates/config/: __init__.py.j2  model_config.yaml.j2  prompt_templates.yaml.j2
genai_scaffold/templates/examples/: basic_completion.py.j2
genai_scaffold/templates/new/: .env.example.j2  .gitignore.j2  Dockerfile.j2  Makefile.j2  README.md.j2  app_fastapi.py.j2  app_gradio.py.j2  app_streamlit.py.j2  docker-compose.yml.j2  pyproject.toml.j2  requirements-dev.txt.j2  requirements.txt.j2
genai_scaffold/templates/new/src/: config.py.j2  observability.py.j2  rag_pipeline.py.j2  vector_store.py.j2
genai_scaffold/templates/new/src/llm/: client.py.j2
genai_scaffold/templates/new/tests/: conftest.py.j2  test_example.py.j2
genai_scaffold/templates/src/handlers/: __init__.py.j2  error_handler.py.j2
genai_scaffold/templates/src/llm/: __init__.py.j2  base.py.j2  claude_client.py.j2  gpt_client.py.j2  utils.py.j2
genai_scaffold/templates/src/prompt_engineering/: __init__.py.j2  chainer.py.j2  few_shot.py.j2  templates.py.j2
genai_scaffold/templates/src/utils/: __init__.py.j2  cache.py.j2  logger.py.j2  rate_limiter.py.j2  token_counter.py.j2
tests/: test_config.py  test_generator.py  test_scaffold.py
(+5 files in other folders)
